뷰 개발 - fragment 분리

--- a/src/main/resources/templates/admin/page-table.html
+++ b/src/main/resources/templates/admin/page-table.html
@@ -398,7 +398,7 @@
             </a>
           </li>
           <li>
-            <a href="tables-data.html" class="active">
+            <a href="page-table.html" class="active">
               <i class="bi bi-circle"></i><span>Data Tables</span>
             </a>
           </li>
