스프링 시큐리티 로그인 개발

--- a/src/main/resources/templates/admin/fragments/fragment-header.html
+++ b/src/main/resources/templates/admin/fragments/fragment-header.html
@@ -32,7 +32,7 @@
           </li>
 
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="#">
+            <a class="dropdown-item d-flex align-items-center" href="/admin/logout">
               <i class="bi bi-box-arrow-right"></i>
               <span>Sign Out</span>
             </a>
